# selfmade-wayland-compositor

./: meson.build
protocols/: meson.build
src/: callback.c  compositor.c  main.c  meson.build  region.c  surface-state.c  surface.c  xdg-shell-desktop-client.c  xdg-shell-desktop.c  xdg-surface.c  xdg-toplevel.c  y11.h
